--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="<%= config.language %>">
-
+<script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
 <head>
     <%- partial('_partial/head',{cache: true}) %>
 </head>
